fix: autocomplete with downshift

--- a/src/components/SearchBar/styles.module.scss
+++ b/src/components/SearchBar/styles.module.scss
@@ -3,12 +3,33 @@
 .searchContainer {
   width: 20rem;
   height: 1.7rem;
+  padding-bottom: 5rem;
+  display: flex;
+  flex-direction: column;
 
-  >input {
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    border: none;
-    padding: 0.5rem 1.5rem;
+  div {
+    >input {
+      width: 100%;
+      height: 100%;
+      border-radius: 5px;
+      border: none;
+      padding: 0.5rem 1.5rem;
+    }
   }
+
+  ul {
+    background: white;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+
+    li {
+      padding-left: 0.5rem;
+      padding-bottom: 0.2rem;
+      padding-top: 0.3rem;
+
+    }
+  }
+
 }
